# 2DGameEngine

./: .gitignore  README.md  mvp.md
Project/: README.md
Project/Editor/: GameEditor.py  GameEditor.ui  dummyConfig.json  savefile.json
Project/Game/: Brewfile  CMakeLists.txt  build.sh
Project/Game/Assets/: texts.json
Project/Game/Config/: config.json
Project/Game/src/: game.cpp  game.h  main.cpp  start_menu.cpp  start_menu.h  tinymath.h  utility.cpp  utility.h
Project/Game/src/object/: border.cpp  border.h  border_manager.cpp  border_manager.h  coin.h  collidable_object.h  fallable_object.cpp  fallable_object.h  object.cpp  object.h  tile.cpp  tile.h  tile_manager.cpp  tile_manager.h
Project/Game/src/object/enemy/: patrol_enemy.h
Project/Game/src/physics/: collision.cpp  collision.h
Project/Game/src/resource/: audio.h  base.cpp  base.h  config.h  font.h  game_audio.cpp  game_audio.h  game_config.cpp  game_config.h  game_font.cpp  game_font.h  game_image.cpp  game_image.h  game_text.cpp  game_text.h  image.cpp  image.h  null_image.h  text.cpp  text.h
Project/Game/src/test/: tests-math.cpp
Project/Game/src/world/: camera_system.cpp  camera_system.h  level.h  level_manager.cpp  level_manager.h  moving_object.h  player.cpp  player.h  player_input.cpp  player_input.h  world.cpp  world.h
